# knots

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Invoke-LocalChecks.ps1  MERGE_CONFLICT_AUTO_RESOLUTION.md  Makefile  README.md  TAXONOMY.md  install.ps1  install.sh  knots-architecture-v4.md  knots-architecture-v5.md  package-lock.json  package.json
.changeset/: add-e2e-claim-boundary.md  clarify-planning-child-knot-creation.md  cold-tier-invariant-check.md  deprecate-claim-agent-metadata.md  diffinite-sync-ref.md  doctor-fix-progress.md  doctor-fix-sync-after-repairs.md  doctor-workflow-id-parity.md  enrich-list-lease-agent.md  execution-plan-objective-required.md  fancy-clouds-accept.md  fix-execution-plan-replay.md  fix-tag-filter-pagination.md  fresh-terminal-heads.md  fuzzy-knots-migrate-performance.md  gate-eval-acceptance.md  handle-unknown-workflow-sync.md  installer-upgrade-rail.md  kno-mcp-server.md  knot-type-sync-backfill.md  lease-agent-identity-deprecation.md  linked-worktree-store-share.md  ls-empty-query-pagination.md  nested-cache-doctor.md  patch-release-0162.md  preserve-tag-casing.md  quiet-lease-skills.md  rehydrate-from-worktree-events.md  release-notes-from-changelog.md  rename-skill-to-prompt.md  scope-sync-doctor-patch.md  six-carpets-drive.md  swift-lions-lie.md  swift-oranges-hear.md  sync-description-regression-fix.md  sync-legacy-profile-and-default-workflow.md  sync-legacy-workflow-id.md  sync-push-configured-store.md  verification-steps.md  windows-native-install.md
assets/: demo.cast
docs/: README.md  execution-plans.md  leases.md  mcp-server-design.html  portfolio-plan.md  tier-balance.md
loom/: README.md
scripts/: README.md  demo.sh
skills/: knots.md  knots_create.md  knots_e2e.md  knots_plan_orchestrator.md
src/: app.rs  cli.rs  cli_agent.rs  cli_help.rs  cli_lease_tests.rs  cli_ops.rs  db.rs  (+102 more)
(+5666 files in other folders)
