[package]
name = "knots"
version = "0.17.0"
edition = "2021"

[features]
mcp = ["dep:rmcp", "dep:tokio", "dep:axum", "dep:schemars"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
too_many_lines = "warn"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1.8", features = ["v7"] }
clap_complete = "4.5"
rmcp = { version = "1.7.0", default-features = false, features = [
    "server",
    "macros",
    "schemars",
    "transport-io",
    "transport-streamable-http-server",
], optional = true }
tokio = { version = "1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "time",
], optional = true }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"], optional = true }
schemars = { version = "1", optional = true }

[dev-dependencies]
portable-pty = "0.9.0"

[[bin]]
name = "kno-mcp"
path = "src/bin/kno_mcp.rs"
required-features = ["mcp"]
